# backend/api/src/main/resources/openapi/openapi.json
@@ -39,35 +39,6 @@
       }
     },
     "/product": {
-      "get": {
-        "tags": [
-          "product"
-        ],
-        "summary": "RabbitMQ test",
-        "operationId": "testRabbitMQ",
-        "parameters": [
-          {
-            "name": "count",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Test response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/GenericResponse"
-                }
-              }
-            }
-          }
-        }
-      },
       "post": {
         "tags": [
           "product"
